<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".attendance"
    android:background="@drawable/at"
    android:id="@+id/drawer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20sp"
        android:orientation="vertical">


        <CheckBox
            android:id="@+id/r1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="22sp" />

        <CheckBox
            android:id="@+id/r2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="22sp" />

        <CheckBox
            android:id="@+id/r3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="22sp" />

        <CheckBox
            android:id="@+id/r4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="22sp" />

        <CheckBox
            android:id="@+id/r5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="50sp"
            android:layout_marginRight="15sp"
            android:autofillHints=""
            android:gravity="top"
            android:hint="enter date  dd-mm-yy"
            android:inputType=""
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="100sp"
            android:layout_height="50sp"

            android:layout_marginStart="100sp"
            android:layout_marginTop="40sp"
            android:onClick="submit"
            android:text="@string/submit"
            android:textColor="#000" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu" />
</android.support.v4.widget.DrawerLayout>